Change layout - prevent card vertical stretching

--- a/zis/assets/styles.css
+++ b/zis/assets/styles.css
@@ -27,7 +27,7 @@ body {
 main {
     display: grid;
     grid-gap: 2vw;
-    grid-template-columns: repeat(auto-fit  , minmax(250px, 500px));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 500px));
     grid-auto-rows: max-content;
     justify-content: center;
 }
@@ -62,13 +62,13 @@ h1 {
     display: grid;
     grid-column-gap: 10px;
     grid-template-columns: 2fr max-content 2fr;
-    align-items: end;
+    align-items: start;
+    font-size: 0.8em;
 }
 
 .card dt {
     grid-column: 2;
     font-weight: 600;
-    font-size: 0.8em;
 }
 
 .card dt::after {
@@ -90,7 +90,7 @@ h1 {
     width: 1px;
 }
 
-.card .agent-status+dd {
+.card .agent-status + dd {
     border: 1px solid;
     position: absolute;
     color: #1f4daf;
@@ -103,17 +103,17 @@ h1 {
     opacity: 0.3;
 }
 
-.card .agent-status+dd strong {
+.card .agent-status + dd strong {
     display: block;
 }
 
-.card .agent-image+dd {
+.card .agent-image + dd {
     grid-column: 1;
     grid-row: 1 / span 5;
     align-self: start;
 }
 
-.card .agent-link+dd {
+.card .agent-link + dd {
     grid-column: 2 / span 2;
     align-self: end;
     padding-top: 10px;
@@ -123,8 +123,8 @@ h1 {
     max-width: 100%;
 }
 
-.card .agent-link+dd img {
-    max-height: 125px;
+.card .agent-link + dd img {
+    max-height: 100px;
     max-width: none;
     width: auto;
 }
